// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render align 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-12k3qvk"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-uis2zj"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-uis2zj"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render defaultValue 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-uis2zj"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
      value="Olaf"
    />
  </div>
</div>
`;

exports[`props should render disabled 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
  disabled=""
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-uis2zj"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      disabled=""
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render gap 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1lso9a0"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-uis2zj"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render isRounded 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-uis2zj"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render isSeamless 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-uis2zj"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render justify 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-qkxc2g"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-uis2zj"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render multiline 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-jrglea"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <textarea
      class="css-1lnf5lh"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
    />
  </div>
</div>
`;

exports[`props should render prefix 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item css-1bku9vz"
    data-g2-c16t="true"
    data-g2-component="TextInputPrefix"
  >
    <span>
      prefix
    </span>
  </div>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-uis2zj"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-3rhlko"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render suffix 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-uis2zj"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
      value=""
    />
  </div>
  <div
    class="wp-components-view wp-components-flex-item css-1bku9vz"
    data-g2-c16t="true"
    data-g2-component="TextInputSuffix"
  >
    <span>
      suffix
    </span>
  </div>
</div>
`;

exports[`props should render value 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-uis2zj"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="text-input"
      value="Olaf"
    />
  </div>
</div>
`;
